# miniXML

./: .gitignore  CMakeLists.txt  LICENSE
docs/: README.md
include/: document.hpp  miniXML.hpp  node.hpp  parser.hpp  tokenizaton.txt  types.hpp
include/miniXML/: document.hpp  entities.hpp  node.hpp  parser.hpp  types.hpp
testing/: file.xml  test_entities.cxx  test_generate_a_file.cxx  test_parsing_from_a_string.cxx  test_read_and_write.cxx  test_to_string_method.cxx
